<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:screenOrientation="portrait"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<TextView  
		android:paddingTop="20dip"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:textSize="16sp" 
	    android:textStyle="bold"
	    android:gravity="center"
		android:text="@string/testing"/>
 	<TableLayout
		android:paddingTop="10dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:stretchColumns="*">
		<TableRow>
		    <TextView
	    		android:layout_width="fill_parent" 
	    		android:layout_height="wrap_content"
	    		android:text="@string/timestamp_title"
	    		android:gravity="center"/>
		</TableRow>
		<TableRow>
		    <TextView
	    		android:layout_width="fill_parent" 
	    		android:layout_height="wrap_content"
	    		android:id="@+id/timestamp"
	    		android:gravity="center"/>
		</TableRow>
	</TableLayout>
	<TableLayout
		android:paddingTop="10dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:stretchColumns="*">
		<TableRow>
			<TextView  
	    		android:layout_width="fill_parent" 
	    		android:layout_height="wrap_content"
	    		android:textSize="14sp"  
	    		android:text="@string/X_Axis"
	    		android:gravity="center"/>
	    	<TextView  
	    		android:layout_width="fill_parent" 
	    		android:layout_height="wrap_content" 
	    		android:textSize="14sp" 
	    		android:text="@string/Y_Axis"
	    		android:gravity="center"/>
	    	<TextView  
	    		android:layout_width="fill_parent" 
	    		android:layout_height="wrap_content"
	    		android:textSize="14sp"  
	    		android:text="@string/Z_Axis"
	    		android:gravity="center"/>
		</TableRow>
		<TableRow>
			<TextView  
	    		android:layout_width="fill_parent" 
	    		android:layout_height="wrap_content"
	    		android:id="@+id/x_axis"
	    		android:gravity="center"/>
	    	<TextView  
	    		android:layout_width="fill_parent" 
	    		android:layout_height="wrap_content"
	    		android:id="@+id/y_axis"
	    		android:gravity="center"/>
	    	<TextView  
	    		android:layout_width="fill_parent" 
	    		android:layout_height="wrap_content"
	    		android:id="@+id/z_axis"
	    		android:gravity="center"/>
		</TableRow>
	</TableLayout>
 	<TableLayout
		android:paddingTop="10dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:stretchColumns="*">
		<TableRow>
		    <TextView
	    		android:layout_width="fill_parent" 
	    		android:layout_height="wrap_content"
	    		android:text="@string/pedometer_1"
	    		android:gravity="center"/>
		</TableRow>
		<TableRow>
		    <TextView
	    		android:layout_width="fill_parent" 
	    		android:layout_height="wrap_content"
	    		android:id="@+id/bad_pedometer"
	    		android:gravity="center"/>
		</TableRow>
	</TableLayout>
 	<TableLayout
		android:paddingTop="10dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:stretchColumns="*">
		<TableRow>
		    <TextView
	    		android:layout_width="fill_parent" 
	    		android:layout_height="wrap_content"
	    		android:text="@string/pedometer_2"
	    		android:gravity="center"/>
		</TableRow>
		<TableRow>
		    <TextView
	    		android:layout_width="fill_parent" 
	    		android:layout_height="wrap_content"
	    		android:id="@+id/avg_pedometer"
	    		android:gravity="center"/>
		</TableRow>
	</TableLayout>
 	<TableLayout
		android:paddingTop="10dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:stretchColumns="*">
		<TableRow>
		    <TextView
	    		android:layout_width="fill_parent" 
	    		android:layout_height="wrap_content"
	    		android:text="@string/debug_1"
	    		android:gravity="center"/>
		</TableRow>
		<TableRow>
		    <TextView
	    		android:layout_width="fill_parent" 
	    		android:layout_height="wrap_content"
	    		android:id="@+id/debug_1"
	    		android:gravity="center"/>
		</TableRow>
	</TableLayout>
 	<TableLayout
		android:paddingTop="10dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:stretchColumns="*">
		<TableRow>
		    <TextView
	    		android:layout_width="fill_parent" 
	    		android:layout_height="wrap_content"
	    		android:text="@string/debug_2"
	    		android:gravity="center"/>
		</TableRow>
		<TableRow>
		    <TextView
	    		android:layout_width="fill_parent" 
	    		android:layout_height="wrap_content"
	    		android:id="@+id/debug_2"
	    		android:gravity="center"/>
		</TableRow>
	</TableLayout>
	 	<TableLayout
		android:paddingTop="10dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TableRow>
		    <TextView
	    		android:layout_width="fill_parent" 
	    		android:layout_height="wrap_content"
	    		android:text="@string/fname"
	    		android:gravity="center"/>
		</TableRow>
		<TableRow>
		    <TextView
	    		android:layout_width="fill_parent" 
	    		android:layout_height="wrap_content"
	    		android:id="@+id/fname"
	    		android:gravity="center"/>
		</TableRow>
	</TableLayout>
	<!--ImageView
		android:paddingTop="10dip"
		android:layout_width="wrap_content" 
   		android:layout_height="wrap_content"
   		android:id="@+id/image"
   		android:layout_gravity="center"
   		android:visibility="invisible"/-->
</LinearLayout>
